# bob-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  OPENCODE.md  QWEN.md  README.md  justfile  sase.yml
docs/: dataview.md  highlights-ref-sync.md  mark-next-tasks.md  plugins.md  projects.md  task-status-hooks.md  task-status-setter.md
memory/: README.md  cli_rules.md  sase.md
memory/long/: cli_rules.md
sase/: sase.yml
sase/memory/: README.md  cli_rules.md  sase.md
scripts/: bob_pomodoro  bob_pomodoro_runtimes  bob_sync  tmux_bob_pomodoro
sdd/: README.md
sdd/beads/: beads.db  config.json  issues.jsonl
sdd/beads/events/: manifest.json
sdd/epics/202606/: bob_projects_command.md  collect_done.md  dataview_native_parity.md  obsidian_projects.md
sdd/prompts/202606/: hide_tag_migration.md  highlights_pdf_task_creation.md
sdd/prompts/202607/: fix_next_tasks_query_operator.md  next_status_on_pomodoro_task_link.md  pomodoro_next_status_in_progress.md  replace_blocked_with_next_task_status.md
sdd/research/202606/: bob_obsidian_plugins_repo.md  bulk_set_task_property.md  dataview_cli_queries.md  dataview_parity.md  gtd_projects_in_obsidian.md  hammerspoon_to_quickadd_task_capture.md  obsidian_bullet_task_search.md  obsidian_usage_improvements.md  obsidian_vim_surround_keymaps.md  obsidian_vs_notion_tradeoffs.md  pdf_highlights_tasks_roadmap.md
sdd/research/202607/: dedupe_dash_tasks_queries.md
sdd/tales/202606/: auto_block_link_completion.md  block_link_task_picker.md  bob_capture_command.md  bold_ledger_time_ranges.md  capture_bullet_section_matching.md  capture_bullets.md  capture_embedded_bullet_marker.md  capture_scheduled_offset.md  capture_section_picker.md  capture_targets_verbose_warnings.md  cli_short_options.md  collect_done_block_id_dedup.md  collect_done_obsidian_link_repair.md  conditional_pomodoro_creation.md  convert_sase_project.md  ctrl6_block_id_keymap.md  ctrl_enter_task_completion.md  ctrl_shift_jk_pomodoro_tasks.md  daily_dash_keymap.md  dataview_no_sync.md  dependency_block_id_batch_prompts.md  depends_on_single_bullet.md  done_archive_parent_type.md  (+71 more)
src/: lib.rs  native.rs  runner.rs  scripts.rs
src/native/: capture.rs  capture_clip.rs  collect_done.rs  cronjob.rs  dataview.rs  env.rs  mark_next.rs  markdown.rs  notify.rs  ob.rs  plugins.rs  pomodoro.rs  projects.rs  runtimes.rs  style.rs  sync.rs  task_status_hooks.rs  task_status_setter.rs
tests/: cli.rs  dataview_parity.rs  tasks_parity.rs  tasks_real_vault_parity.rs
(+76 files in other folders)
