[package]
name = "bob-cli"
version = "0.1.0"
edition = "2024"
description = "Bob command-line tools"
repository = "https://github.com/bbugyi200/bob-cli"
default-run = "bob"
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/docs/**",
    "/justfile",
    "/src/**",
    "/scripts/**",
    "/tests/**",
]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = "4.5"
fs2 = "0.4"

[[bin]]
name = "bob"
path = "src/main.rs"

[[bin]]
name = "bob_pomodoro"
path = "src/bin/bob_pomodoro.rs"

[[bin]]
name = "bob_notify"
path = "src/bin/bob_notify.rs"

[[bin]]
name = "bob_sync"
path = "src/bin/bob_sync.rs"

[[bin]]
name = "tmux_bob_pomodoro"
path = "src/bin/tmux_bob_pomodoro.rs"
